--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,7 +138,6 @@ body {
 .scroll-box {
     display: flex;
     flex-direction: column;
-    gap: $gap-primary;
     height: 100%;
     overflow-y: auto;
 }
@@ -375,4 +374,20 @@ body {
     background-color: $bgClr-newChat;
     border: $border-primary;
     min-height: unset !important;
+}
+
+
+
+.mat-autocomplete-panel {
+    background-color: $bgClr-primary;
+
+    
+    .mat-option {
+        color: $txt-clr-primary;
+
+        &:hover {
+            background: $txt-clr-link;
+            color: $txt-clr-secondary;
+        }
+    }
 }
